# homelab-dash

./: .gitignore  CLAUDE.md  README.md  deploy-to-lxc.sh  start-dev.sh  update-lxc.sh
.claude/: settings.local.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  advisory.py  device.py  dns.py  network.py  scan.py  service.py  user.py
backend/app/routers/: advisor.py  auth.py  devices.py  dns.py  networks.py  ollama.py  pfsense.py  proxmox.py  scans.py  services.py  settings.py  sonicwall.py  switch.py  unifi.py  ws.py
backend/app/schemas/: advisory.py  auth.py  device.py  dns.py  network.py  scan.py  service.py  settings.py
backend/app/services/: advisor_engine.py  device_monitor.py  dns_monitor.py  health_checker.py  ollama_client.py  pfsense_client.py  proxmox_client.py  scan_service.py  sonicwall_client.py  switch_client.py  unifi_client.py  ws_manager.py
backend/app/tasks/: scheduler.py
backend/app/utils/: security.py
ct/: homelab-dash.sh
deploy/: .env.example  homelab-dash-backend.service  homelab-dash.nginx.conf  install.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: advisor.ts  auth.ts  client.ts  devices.ts  dns.ts  networks.ts  ollama.ts  pfsense.ts  proxmox.ts  scans.ts  services.ts  settings.ts  sonicwall.ts  switch.ts  unifi.ts
frontend/src/hooks/: useAuth.ts  useWebSocket.ts
install/: homelab-dash-install.sh  update.sh
(+22 files in other folders)
